--- a/SlackApi/appsettings.json
+++ b/SlackApi/appsettings.json
@@ -10,6 +10,13 @@
     "SqlConnection": "xxx"
   },
   "ApplicationSettings": {
-    "Name": "yyy"
+    "Name": "yyy",
+    "SlackSettings": {
+      "DefaultSlackWebhookUri": "",
+      "OutgoingOAuthToken": "",
+      "IncomingToken": "",
+      "SigningSecret": "",
+      "DefaultVersionNo": "v0"
+    }
   }
 }
