Updated interactive event payloads

--- a/SlackApi/appsettings.json
+++ b/SlackApi/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "SqlConnection": "xxx"
   },
-  "ApplicationSettings": {
+  "AppSettings": {
     "Name": "yyy",
     "SlackSettings": {
       "DefaultSlackWebhookUri": "",
