--- a/SlackApi.App/SlackApi.App.csproj
+++ b/SlackApi.App/SlackApi.App.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SlackApi.Domain\SlackApi.Domain.csproj" />
+    <ProjectReference Include="..\SlackApi.Repository\SlackApi.Repository.csproj" />
   </ItemGroup>
 
 </Project>
