--- a/SlackApi.Core/SlackApi.Core.csproj
+++ b/SlackApi.Core/SlackApi.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
