Added telemetry tracking

--- a/SlackApi/appsettings.Development.json
+++ b/SlackApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "TableStorage": null,
+    "SqlConnection":  null
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
