--- a/SlackApi/appsettings.json
+++ b/SlackApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": null
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,6 +11,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlConnection": "xxx"
+  },
+  "TelemetrySettings": {
+
   },
   "AppSettings": {
     "Name": "yyy",
