--- a/SlackApi.App/SlackApi.App.csproj
+++ b/SlackApi.App/SlackApi.App.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 
