Added transaction system

--- a/SlackApi/appsettings.json
+++ b/SlackApi/appsettings.json
@@ -17,6 +17,9 @@
   },
   "AppSettings": {
     "Name": "yyy",
+    "DefaultWeeklyBalance": 100.00,
+    "MaxTransactionSize": 100.00,
+    "ApiToken": "XNcVWZS7Dhja2Zru",
     "SlackSettings": {
       "DefaultSlackWebhookUri": "",
       "OutgoingOAuthToken": "",
