--- a/SlackApi.Domain/SlackApi.Domain.csproj
+++ b/SlackApi.Domain/SlackApi.Domain.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SlackApi.Core\SlackApi.Core.csproj" />
   </ItemGroup>
 
 </Project>
