--- a/SlackApi/appsettings.json
+++ b/SlackApi/appsettings.json
@@ -10,7 +10,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": "xxx"
+    "SqlConnection": null,
+    "QueueStorage": "UseDevelopmentStorage=true"
   },
   "TelemetrySettings": {
 
