--- a/SlackApi.Repository/SlackApi.Repository.csproj
+++ b/SlackApi.Repository/SlackApi.Repository.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.5.0" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.6.0" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.10.0" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.22" />
